@@ -7,6 +7,11 @@ Um simples visualizador de checksum em PyQt4!
 CHANGELOG:
 ==========
 
+VERSÃO 1.0.2:
+- Corrigido bug do programa ao abrir arquivos com caracteres Unicode.
+
+#------------------------------------------------------------------------------------------------------------------
+
 VERSÃO 1.0.1:
 - Corrigido problema de congelamento aleatório da janela do programa quando processo de cálculo de hash é iniciado.
 
